<resources>
    <string name="app_name">Github Users</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="username_github">username github</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="following">%1$d Following</string>
    <string name="follower">%1$d Follower</string>
    <string name="status">status</string>
    <string name="bio">Bio</string>
    <string name="repositories">%1$d Repositories</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="followers">Followers</string>
    <string name="followi">Following</string>
    <string name="repositoris">Repositoris</string>
    <string name="save_favorite">Save Favorite?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
    <string name="delete_content">Delete Content?</string>
    <string name="delete_icon">Hapus</string>
    <string name="dark_mode">Dark Mode</string>
</resources>